--- a/duncheck_client/package.json
+++ b/duncheck_client/package.json
@@ -17,7 +17,8 @@
     "redux": "4.1.1",
     "redux-thunk": "2.3.0",
     "styled-components": "5.3.1",
-    "web-vitals": "1.1.2"
+    "web-vitals": "1.1.2",
+    "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
     "start": "react-scripts start",
